fix rainbow highlight shrinkign at overflow by flex shirnk

--- a/styles.css
+++ b/styles.css
@@ -452,8 +452,9 @@ h2 {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    flex-wrap: wrap;
-    /* gap: 10px; */
+    /* flex-wrap: wrap; */
+    overflow: auto;
+    gap: 10px;
 }
 
 /* .color-option {
@@ -690,6 +691,9 @@ h2 {
 
 .color-option {
     box-sizing: border-box;
+    display: flex;
+    flex-shrink: 0;
+    flex-grow: 0; 
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -718,6 +722,8 @@ h2 {
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    flex-shrink: 0;
+    flex-grow: 0; 
     /* background: linear-gradient(
         90deg, 
         red,
